--- a/HelloCore/HelloCore/Views/Shared/_Layout.cshtml
+++ b/HelloCore/HelloCore/Views/Shared/_Layout.cshtml
@@ -37,6 +37,14 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Test Squash</h1>
+            <p>
+                Prima modifica
+            </p>
+        </div>
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
