--- a/HelloCore/HelloCore/Views/Shared/_Layout.cshtml
+++ b/HelloCore/HelloCore/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
             <p>
                 Prima modifica
             </p>
+            <p>
+                ... ed eccone un altra
+            </p>
         </div>
     </div>
     <div class="container body-content">
