--- a/HelloCore/HelloCore/Views/Shared/_Layout.cshtml
+++ b/HelloCore/HelloCore/Views/Shared/_Layout.cshtml
@@ -39,13 +39,7 @@
     </nav>
     <div class="container">
         <div class="jumbotron">
-            <h1>Test Squash</h1>
-            <p>
-                Prima modifica
-            </p>
-            <p>
-                ... ed eccone un altra
-            </p>
+            <h1>Questa è una prova di squash</h1>
         </div>
     </div>
     <div class="container body-content">
